[package]
name = "rangex"
version = "0.1.0"
authors = ["Brendan Molloy <brendan@bbqsrc.net>"]
description = "Inclusive/exclusive/unbounded Range type compatible with sqlx and async_graphql"
edition = "2018"

[dependencies]
async-graphql = { version = "2", optional = true }
sqlx = { version = "0.5.5", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1"

[dev-dependencies.sqlx]
version = "0.5.5"
features = ["runtime-tokio-rustls", "postgres"]

# [features]
# default = ["async-graphql", "sqlx", "serde"]